@@ -3,4 +3,4 @@ $ wajig changelog PKG
 options:
   -v --verbose=1    if there's newer entries, display them, and proceed to
                     display complete local changelog
-  -x --pager        same as -v, but use a pager (EG, less)
+  -P --pager        same as -v, but use a pager (EG, less)
